[gd_scene load_steps=3 format=3 uid="uid://bxanwt5o3b0ng"]

[ext_resource type="Script" uid="uid://darqwls1ewij0" path="res://addons/gaea_screenshotter/screenshot_tool.gd" id="1_otp6y"]
[ext_resource type="Script" uid="uid://obmksa6ngu1s" path="res://addons/gaea_screenshotter/tree.gd" id="5_njl0m"]

[node name="ScreenshotTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otp6y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search..."

[node name="Tree" type="Tree" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_njl0m")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OpenFolderButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
tooltip_text = "Open containing folder..."

[node name="CaptureAllButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Capture All"

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 301)
render_target_update_mode = 4

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "This will create images for every node in the tree, are you sure you want to?"

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/SearchBar" to="HBoxContainer/VBoxContainer/Tree" method="_on_search_bar_text_changed"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer/Tree" to="HBoxContainer/VBoxContainer/Tree" method="_on_item_activated"]
[connection signal="node_selected_for_creation" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_tree_node_selected_for_creation"]
[connection signal="special_node_selected_for_creation" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_tree_special_node_selected_for_creation"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/OpenFolderButton" to="." method="_on_open_folder_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/CaptureAllButton" to="." method="_on_capture_all_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
